style.css
:root {
  --width: 40rem;
}

html {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.4;
}
html, h1 a {
  color: #000000;
}
h1 {
  view-transition-name: title;
}
@media (prefers-color-scheme: dark) {
  html {
    background-color: #121212;
  }
  html, h1 a {
    color: #FFFFFF;
  }
}

body{
  margin:1.2em;
  font-size:1rem;
}

header, footer, main {	
  max-width: var(--width);	
  margin: 0 auto;	
}

header {
  margin-bottom: 3em;
}

img, video {
  display: block;
  max-width: 100%;
  height: auto;
  max-height: var(--width);
  margin: 0 auto;
}

img.icon {
  max-width: 200px;
}

/* Figures with 2 images */
/* we use 3 because we assume there is a <figcaption> element */
figure > img:first-child:nth-last-child(3),
figure > img:first-child:nth-last-child(3) ~ img {
  display: inline;
  width: 40%;
}

iframe {
  width: 100%;
  display: block;
  margin: 0 auto;
}

ul, ol{
  margin-top:0;
  padding-top:0;
  padding-left:2em;
}

h1{
  font-size: 2.5em;
}
  
h2{
  font-size: 1.75em;
}

h3{
  font-size: 1.25em;
}

a{
  color:#0064c1;
}
a:visited{
  color:#8d39d0;
}
a:hover, a:active{
  outline-width:0;
}
a:hover{
  color:#f00000;
}
@media (prefers-color-scheme: dark) {
  a{
    color: hsla(209, 100%, 85%, 1);
  }
  a:visited{
    color: hsla(273, 62%, 85%, 1);
  }
}


h1 a, h2 a, h3 a,
h1 a:visited, h2 a:visited, h3 a:visited {
  color: #000000;
  text-decoration: none;
}
@media (prefers-color-scheme: dark) {
  h1 a, h2 a, h3 a,
  h1 a:visited, h2 a:visited, h3 a:visited {
    color: #FFFFFF;
  }
}

h1 a:hover, h2 a:hover, h3 a:hover {
  color: #444444;
}

figure{
  margin:1em 0 0.5em;
  padding:0;
  text-align: center;
}

figure figcaption{
  opacity:0.65;
  font-size:0.85em;
}

code, kbd, var, samp{
  font-family:Consolas, "Lucida Console", Monaco, monospace;
  font-style:normal;
  background-color: hsla(0, 0%, 0%, 0.1);
  border-radius: 0.25em;
}
@media (prefers-color-scheme: dark) {
  code {
    background-color: hsla(0, 0%, 100%, 0.1);
  }
}

pre{
  overflow-x: auto;
  font-size: 0.8em;
}

pre > code{
  display: inline-block;
  overflow-x: visible;
  box-sizing: border-box;
  min-width: 100%;
  padding: 1em;
}

